7174704: [macosx] New issue in 7u6 b12: HeadlessPrintingTest failure

Load the lwawt native library on Mac regardless of the headless/headful mode. Also, some minor cleanup.

Reviewed-by: art, serb